fix: fix modal z-index on delete

--- a/app/(dashboard)/project/[id]/page.module.scss
+++ b/app/(dashboard)/project/[id]/page.module.scss
@@ -67,6 +67,6 @@
 .taskList {
   height: 82%;
   overflow: scroll;
-  // position: relative;
+  position: relative;
   // z-index: 4;
 }
